// Protocol buffers definition for Silo server

syntax = "proto3";
package pt.tecnico.sauron.silo.grpc;

enum ResponseMessage {
    SUCCESS = 0;
    INIT_FAIL = 1;
    CLEAR_FAIL = 2;
    
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}

message ClearRequest {
}

message ClearResponse {
    ResponseMessage response = 1;
}

message InitRequest { // TODO: fill later
}

message InitResponse {
    ResponseMessage response = 1;
}

message ReportRequest {

}

message ReportResponse {
    ResponseMessage response = 1;
}

message Coordinates {
   double latitude = 1; // assure precision to 6 decimal cases (float barely reaches 5 at 128-256 range)
   double longitude = 2;
 }

message CameraRegistrationRequest {    
        string name = 1;
        Coordinates coords = 2;
}

message CameraRegistrationResponse {    
    ResponseMessage response = 1;
}

// service

service Sauron {
    rpc ctrlPing(PingRequest) returns (PingResponse);
    rpc camJoin(CameraRegistrationRequest) returns (CameraRegistrationResponse);
}
